[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[profile.release]
debug = 1

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
qtum = { path = "../../rust-qtum/qtum", version = "0.30.0-qtum", features = ["rand"] }
libfuzzer-sys = "0.4"
ord = { path = ".." }

[[bin]]
name = "transaction-builder"
path = "fuzz_targets/transaction_builder.rs"
test = false
doc = false
